# amfoss-tasks

./: README.md
Introspection/: ReadMe.md
Task-00/: ReadMe.md
Task-02/: Readme.md
Task-03/: HackerRank-HeroToZero.py  HackerRank-LosingStreak-2.0.py  ReadMe.md
Task-04/: README.md
Task-05/: README.md
Task-05/Server/: Program.cs  file.json
Task-06/: Readme.md  bunny_game.dart  bunny_player.dart
Task-07/: go.mod  main.go
Task-08/: README.md  index.html  index.js  styles.css
Task-09/: Cargo.toml  ReadMe.md  crypto.csv
Task-09/src/: main.rs
Task-10/pset0/: Scratch Project.sb3
Task-10/pset1/cash/: cash.c
Task-10/pset1/hello/: hello  hello.c
Task-10/pset1/mario/: mario  mario.c
Task-10/pset2/caesar/: caesar  caesar.c
Task-10/pset2/readability/: readability  readability.c
Task-10/pset3/plurality/: plurality.c
Task-10/pset3/runoff/: runoff  runoff.c
Task-10/pset4/filter/: filter  helpers.c
Task-11/: README.md
Task-14/: Readme.md
Task1/: Readme.md
task-04/: README.md  bot.py  details.json
task-05/: Screencast from 11-12-22 06:43:52 PM IST.webm
task-05/Client/: Program.cs
task-06/: main.dart  pubspec.yaml
task-06/helpers/: navigation_keys.dart
task-07/: index.html  main.wasm
task-07/server/: server.go
task-14/: pass.txt
