[package]
name = "web_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking", "json"]}
scraper = "0.12.0"
select = "0.5.0"
unwrap = "1.2.1"
prettytable-rs = "0.9.0"
fltk = "1.2"
fltk-table = "0.1"
csv = "1.1"
serde = {version="1.0.0",features = ["derive"]}
indexmap = {version="1.9.1", features = ["serde"]} 